[package]
authors = ["The Hyperledger Aries Contributors"]
description = "Hyperledger Indy BLS Signatures"
documentation = "https://docs.rs/indy-blssignatures"
edition = "2021"
license = "Apache-2.0"
name = "indy-blssignatures"
readme = "README.md"
repository = "https://github.com/hyperledger-indy/indy-blssignatures-rs"
version = "0.1.1"
rust-version = "1.63"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde"]
ffi = ["env_logger", "log", "once_cell", "serde_json"]

[dependencies]
amcl = "0.2"
env_logger = { version = "0.10", optional = true }
log = { version = "0.4", optional = true }
once_cell = { version = "1", optional = true }
rand = "0.8"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = "0.10"
sha3 = "0.10"

[dev-dependencies]
hex = "0.4"
serde_json = "1"

[[bench]]
name = "bls"
harness = false
